--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
+@import "grid";
+@import "variables";
 
 html,
 body {
@@ -23,21 +25,4 @@ a {
 a:active,
 a:hover {
   color: #000;
-}
-
-.youtube-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-  overflow: hidden;
-  margin-bottom: 50px;
-}
-
-.youtube-container iframe {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
