add duplicated images

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,6 +1,8 @@
-.missionContainer {
+.heroContainer {
+  background-color: blue;
   width: 100%;
-  min-height: 300px;
+  height: 100vh;
+  max-height: 1200px;
   display: flex;
   align-items: center;
   justify-content: center;
