--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -3,6 +3,23 @@
 @import "grid";
 @import "variables";
 
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+li {
+  margin: 0;
+  color: #222;
+  white-space: pre-wrap;
+}
+
 html,
 body {
   font-family: "Ubuntu", sans-serif;
@@ -25,4 +42,65 @@ a {
 a:active,
 a:hover {
   color: #000;
+}
+
+h1 {
+  font-size: 34px;
+  line-height: 44px;
+  @media only screen and (min-width: $breakpoint-sm) {
+    font-size: 42px;
+    line-height: 60px;
+  }
+  @media only screen and (min-width: $breakpoint-lg) {
+    font-size: 56px;
+    line-height: 78px;
+  }
+}
+
+h2 {
+  font-size: 30px;
+  line-height: 40px;
+  @media only screen and (min-width: $breakpoint-sm) {
+    font-size: 38px;
+    line-height: 48px;
+  }
+  @media only screen and (min-width: $breakpoint-lg) {
+    font-size: 42px;
+    line-height: 50px;
+  }
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 32px;
+  @media only screen and (min-width: $breakpoint-sm) {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  @media only screen and (min-width: $breakpoint-lg) {
+    font-size: 38px;
+    line-height: 48px;
+  }
+}
+
+h4 {
+  font-size: 24px;
+  line-height: 32px;
+  @media only screen and (min-width: $breakpoint-lg) {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+p,
+.body {
+  font-size: 19px;
+  line-height: 30px;
+  letter-spacing: 0.5px;
+}
+
+.body-small {
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
 }
