--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,9 +1,34 @@
+@import "public/styles/variables";
+
 .heroContainer {
-  background-color: blue;
   width: 100%;
   height: 100vh;
-  max-height: 1200px;
+  max-height: 1000px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 60px 20px;
+  @media only screen and (min-width: $breakpoint-sm) {
+    padding: 60px 30px;
+  }
+  @media only screen and (min-width: $breakpoint-lg) {
+    padding: 60px;
+  }
+
+  h1 {
+    padding-top: 40%;
+    margin-bottom: 20px;
+    @media only screen and (min-width: $breakpoint-sm) {
+      max-width: 80%;
+      padding-top: 40%;
+    }
+    @media only screen and (min-width: $breakpoint-lg) {
+      padding-top: 20%;
+      max-width: 60%;
+    }
+  }
 }
