--- a/src/components/Value/Value.module.scss
+++ b/src/components/Value/Value.module.scss
@@ -1,8 +1,21 @@
 .valueContainer {
-  background-color: red;
-  width: 100%;
-  min-height: 300px;
+  padding: 80px 0 80px;
+  min-height: 70vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+
+  h4 {
+    margin-bottom: 20px;
+  }
+  .imageContainer {
+    max-width: 100%;
+    height: 300px;
+    border-radius: 10%;
+    overflow: hidden;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
