--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -16,17 +16,19 @@ h6,
 p,
 li {
   margin: 0;
-  color: #222;
+  color: $dark;
   white-space: pre-wrap;
+  font-weight: $font-regular;
 }
 
 html,
 body {
-  font-family: "Ubuntu", sans-serif;
-  background-color: #fff;
-  color: #222;
+  font-family: $default_font_family;
+  background-color: $off-white;
+  color: $dark;
   font-weight: 200;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 #__next {
@@ -47,60 +49,34 @@ a:hover {
 h1 {
   font-size: 34px;
   line-height: 44px;
+  font-weight: $font-bold;
   @media only screen and (min-width: $breakpoint-sm) {
-    font-size: 42px;
-    line-height: 60px;
-  }
-  @media only screen and (min-width: $breakpoint-lg) {
-    font-size: 56px;
-    line-height: 78px;
+    font-size: 45px;
+    line-height: 55px;
   }
 }
 
 h2 {
-  font-size: 30px;
-  line-height: 40px;
+  font-size: 22px;
+  line-height: 32px;
+  font-weight: $font-bold;
   @media only screen and (min-width: $breakpoint-sm) {
-    font-size: 38px;
-    line-height: 48px;
+    font-size: 24px;
+    line-height: 34px;
   }
   @media only screen and (min-width: $breakpoint-lg) {
-    font-size: 42px;
-    line-height: 50px;
+    font-size: 34px;
+    line-height: 44px;
   }
 }
 
 h3 {
-  font-size: 24px;
-  line-height: 32px;
-  @media only screen and (min-width: $breakpoint-sm) {
-    font-size: 30px;
-    line-height: 40px;
-  }
-  @media only screen and (min-width: $breakpoint-lg) {
-    font-size: 38px;
-    line-height: 48px;
-  }
-}
-
-h4 {
-  font-size: 24px;
-  line-height: 32px;
-  @media only screen and (min-width: $breakpoint-lg) {
-    font-size: 30px;
-    line-height: 40px;
-  }
-}
-
-p,
-.body {
-  font-size: 19px;
+  font-size: 20px;
   line-height: 30px;
-  letter-spacing: 0.5px;
+  font-weight: $font-medium;
 }
 
-.body-small {
+p {
   font-size: 16px;
-  line-height: 22px;
-  letter-spacing: 0.5px;
+  line-height: normal;
 }
