--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -16,3 +16,17 @@ $grid-margins-lg: 60px;
 // Grid
 $grid-columns: 12;
 $grid-max-width: 1600px;
+
+// Colors
+$off-grey: #f2f2f2;
+$off-blue: #c4d8e0;
+$off-purple: #c3c7d0;
+$off-white: #f6f9f7;
+$bluey: #93b8c9;
+$dark: #464646;
+
+// Font
+$default_font_family: Roboto, roboto, arial, sans-serif;
+$font-regular: 400;
+$font-medium: 500;
+$font-bold: 700;
