--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -1,8 +1,15 @@
 .root {
   display: block;
-  padding: 4rem 0;
   box-sizing: border-box;
   height: 100%;
+
+  nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+  }
 
   main {
     display: flex;
@@ -10,12 +17,5 @@
     flex-direction: column;
   }
   @media (min-width: 769px) {
-    .root {
-      display: flex;
-      flex: 1 0 auto;
-    }
-    main {
-      flex: 1 0 auto;
-    }
   }
 }
